--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,6 @@ scikit-learn = "*"
 plotly = "*"
 notebook = "*"
 spacy = "*"
-pickle5 = "*"
 joblib = "*"
 flask = "*"
 flask-sqlalchemy = "*"
@@ -18,6 +17,8 @@ jinja2 = "*"
 fastapi = "*"
 uvicorn = {extras = ["standard"], version = "*"}
 aiofiles = "*"
+wordcloud = "*"
+matplotlib = "*"
 
 [dev-packages]
 
